# bitcrust

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.txt  README.md  bench-init  bench-load  bench-next  build.rs  readme.md
bitcrust-admin/src/: blk_file.rs  main.rs
bitcrust-lib/: README.md
bitcrust-lib/src/: block.rs  block_add.rs  buffer.rs  builders.rs  config.rs  context.rs  decode.rs  encode.rs  ffi.rs  hash.rs  lib.rs  merkle_tree.rs  metrics.rs  stack.rs  transaction.rs  util.rs
bitcrust-lib/src/index/: mod.rs
bitcrust-lib/src/script/: context.rs  mod.rs  opcode.rs  opcode_pushdata.rs  stack.rs
bitcrust-lib/src/store/: README.md  block_content.rs  blockheaderptr.rs  fileptr.rs  flatfile.rs  flatfileptr.rs  flatfileset.rs  hash_index.rs  index.rs  mod.rs  spent_index.rs  spent_tree.rs  txfile.rs  txptr.rs
bitcrust-lib/src/store/spent_tree/: mod.rs  params.rs  record.rs
bitcrustd/: Cargo.toml
bitcrustd/src/: client_message.rs  config.rs  db_query.rs  main.rs  peer.rs  peer_manager.rs  util.rs
contrib/: bitcoind.Dockerfile  bitcrust.Dockerfile
contrib/bitcoind/: bitcoind.conf  install.sh  run.sh
doc/: api.md  bitcrust-db.md  file_format.md  plan.ods
encode-derive/: Cargo.toml
encode-derive/src/: lib.rs
encode-derive/tests/: test.rs
hashstore/: .gitignore  Cargo.toml  README.md
hashstore/src/: hashstore.rs  header.rs  io.rs  lib.rs  timer.rs  values.rs
hashstore/tests/: main.rs
monitor/: Cargo.toml
net/: Cargo.toml
net/examples/: addr.rs  client.rs  peer.rs
net/src/: bitcoin_network_connection.rs  block_header.rs  client.rs  client_message.rs  encode.rs  inventory_vector.rs  lib.rs  net_addr.rs  parser.rs  peer.rs  services.rs  transactions.rs  var_int.rs
net/src/message/: addr_message.rs  block_message.rs  getblocks_message.rs  getdata_message.rs  getheaders_message.rs  header_message.rs  inv_message.rs  mod.rs  notfound_message.rs  sendcmpct_message.rs  transaction_message.rs  version_message.rs
net/src/message/bitcrust/: mod.rs
serde_json/src/: ser.rs
serde_network/: Cargo.toml  README.md
serde_network/benches/: bincode.rs
serde_network/src/: de.rs  error.rs  lib.rs  ser.rs
serde_network/tests/: test.rs
site/: blog-spend-tree.html  contact.html  faq.html  features.html  results.html
site/css/: main.css
site/script/: main.js
src/: README.md  api.rs  block.rs  block_add.rs  buffer.rs  builders.rs  config.rs  ffi.rs  hash.rs  lib.rs  merkle_tree.rs  metrics.rs  transaction.rs  util.rs
src/script/: context.rs  mod.rs  opcode.rs  opcode_pushdata.rs  stack.rs
src/store/: README.md  blockheaderptr.rs  flatfile.rs  flatfileset.rs  hash_index.rs  mod.rs  prune.rs  spend_index.rs  spent_index.rs  tips.rs  transactions.rs  txptr.rs
src/store/spend_tree/: mod.rs  record.rs
src/store/spent_tree/: mod.rs  record.rs
store/: Cargo.toml
store/src/: hash.rs  header.rs  lib.rs  network_encoding.rs  record.rs  transaction.rs  util.rs
store/src/api/: block.rs  mod.rs  transaction.rs
store/src/db/: db_block.rs  db_header.rs  db_transaction.rs  mod.rs  output_compress.rs  tip.rs
store/src/pow/: mod.rs  u256.rs
store/src/verify/: header.rs
store/tests/: blk_file.rs  empty_db.rs  get_tx.rs  import.rs  util.rs
tests/: blk_file.rs  compare_core.rs  test_bench.rs  test_file1.rs
tool/: gen_compare.py
