[package]
name = "bitcrust"
version = "0.1.0"
authors = ["Tomas van der Wansem <tomas@tomasvdw.nl>"]


[lib]
name = "bitcrust_lib"
path = "bitcrust-lib/src/lib.rs"


[dependencies]
byteorder = "0.5"

itertools = "0.5.1"
memmap = "0.4"
libc = "0.2.16"
rand = "0.3"
ring = "0.5"

slog = { version = "1.3.2", features = ["max_level_trace", "release_max_level_info"] }
slog-term = "1.3.2"


[dev-dependencies]
tempdir = "0.3"




[[bin]]
name = "bitcrust_admin"
path = "bitcrust-admin/src/main.rs"


[profile.release]
lto = true
opt-level = 3

