[package]
name = "bitcrust"
version = "0.1.0"
authors = ["Tomas van der Wansem <tomas@tomasvdw.nl>"]


[lib]
name = "bitcrust_lib"
path = "src/lib.rs"


[dependencies]
byteorder = "0.5"

itertools = "0.5.1"
memmap = "0.4"
libc = "0.2.30"
rand = "0.3"
ring = "0.16"
serde = { version = "1.0", features = ["derive"] }
toml = "0.4"

slog = { version = "1.3.2", features = ["max_level_trace", "release_max_level_info"] }
slog-term = "1.3.2"

rayon = "0.6"


[dev-dependencies]
tempdir = "0.3"





[profile.release]
lto = true
opt-level = 3

[features]
default = []

[workspace]
members = [ "bitcrustd", "monitor", "net", "encode-derive", "store", "hashstore"]



