[package]
name = "bitcrustd"
version = "0.1.0"
authors = ["Chris MacNaughton <chris@centaurisolutions.nl>"]

[dependencies]
bitcrust-net = {path = "../net"}
clap = "~2.25"
simple_logger = "*"
slog = { version = "1.3.2", features = ["max_level_trace", "release_max_level_info"] }
slog-term = "1.3.2"
multiqueue = "~0.3.2"
ring = "0.12"
serde_derive = "1.0"
serde = "1.0"
toml = "0.4"
rusqlite = "~0.11"

[dev-dependencies]
tempfile = "2.2"
