[package]
name = "bitcrustd"
version = "0.1.0"
authors = ["Chris MacNaughton <chris@centaurisolutions.nl>"]

[dependencies]
bitcrust-net = {path = "../net"}
store = {path = "../store"}
clap = "~2.25"
simple_logger = "*"
log = "0.4"
multiqueue = "~0.3.2"
ring = "0.16"
serde_derive = "1.0"
serde = "1.0"
toml = "0.4"
# rusqlite = "~0.11"
rusqlite = "0.24.2"

# serde_json = {path = "../serde_json"}
serde_json = "1.0.64"

[dev-dependencies]
tempfile = "2.2"
