[package]
name = "bitcrust-net"
version = "0.1.0"
authors = [
  "Chris MacNaughton <chris@centaurisolutions.nl>",
  "Tomas van der Wansem <tomas@tomasvdw.nl>"
]

[dependencies]
bitflags = "0.7"
circular = "~0.2"
byteorder = "1"
log = "0.3"
multiqueue = "~0.3.2"
# nom = "^2.2"
rusqlite = "~0.11"
sha2 = "0.5"

[dependencies.nom]
version = "^2.2"
features = ["verbose-errors"]

[dev-dependencies]
env_logger = "0.4.2"