[package]
name = "serde_network"
version = "0.0.1"
authors = ["Tomas van der Wansem <tomas@bitcrust.org"]

description = "Bitcoin Network format (de)serialization"

include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
byteorder = "1.0"
serde = "1.0"
#bincode = "1.3.2"
#serde-bench = "0.0.7"

[dev-dependencies]
serde_derive = "1.0"
