[package]
name = "store"
version = "0.1.0"
authors = ["Tomas van der Wansem <tomas@tomasvdw.nl>"]

[dependencies]

byteorder = "1"
itertools = "0.5.1"
ring = "0.16"

serde = "*"
serde_derive = "*"

# serde_json = { path = "../serde_json" }
serde_json = "1.0.64"
serde_network = { path = "../serde_network" }

hashstore = { path = "../hashstore" }
